styles/tablet.css
.intro {
    background-image: none;
}
.navbar {
    margin-left: calc(50% - 37rem);
}
.navbar__head {
    justify-content: space-between;
}
.navbar__toggle-button {
    width: 0;
    height: 0;
    visibility: hidden;
}
.navbar__menu {
    background-color: transparent;
    right: auto;
    display: flex;
    flex-direction: row;
    padding: 0;
    width: auto;
    box-shadow: none;
}
.navbar__menu--list {
    display: flex;
    flex-direction: row;
}
.navbar__menu--list-item {
    margin: 1.2rem;
    padding: 1.6rem 0;
}
.about {
    height: 43rem;
    position: relative;
}
.about__img {
    width: 17rem;
    height: 17rem;
    position: absolute;
    top: 9.2rem;
    left: 15%;
}
.about__description {
    width: 24.8rem;
    position: absolute;
    top: 10.8rem;
    right: 16%;
}
.about__button {
    position: absolute;
    top: 21.2rem;
    right: 25%;
}
.about__skills {
    position: absolute;
    top: 28rem;
    left: calc(50% - 12.4rem);
}
.contact {
    height: 41.2rem;
    position: relative;
}
.contact__form {
    width: 24.8rem;
    position: absolute;
    top: 2.4rem;
    right: 15%;
}
.contact__links {
    position: absolute;
    top: 12.4rem;
    left: 5%;
}

